--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "webshot": "^0.18.0"
   }
 }
