--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
+    "chart.js": "^2.7.2",
+    "chartjs-node": "^1.6.1",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "moment": "^2.22.1",
     "node-base64-image": "^1.0.3",
     "twitter": "^1.7.1",
     "webshot": "^0.18.0"
