--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "canvas": "^1.6.10",
     "chart.js": "^2.7.2",
     "chartjs-node": "^1.6.1",
+    "cloudinary": "^1.11.0",
+    "concat-stream": "^1.6.2",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "moment": "^2.22.1",
     "node-base64-image": "^1.0.3",
+    "node-fetch": "^2.1.2",
     "twitter": "^1.7.1",
     "webshot": "^0.18.0"
   }
