--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "moment": "^2.22.1",
+    "natives": "^1.1.6",
     "node-base64-image": "^1.0.3",
     "node-fetch": "^2.1.2",
     "twitter": "^1.7.1",
